# TelarDeFabulas

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  control_tui.bat  pyproject.toml  subir_repo.bat
app/: manage.py
app/apps/accounts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
app/apps/admin_dashboard/: apps.py
app/apps/characters/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
app/apps/exports/: admin.py  apps.py  docx.py  epub.py  forms.py  models.py  pdf.py  services.py  tasks.py  tests.py  urls.py  views.py
app/apps/manuscripts/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
app/apps/notes/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
app/apps/projects/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
app/apps/styles/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
app/config/: celery.py  urls.py
app/config/settings/: base.py  dev.py  prod.py
app/templates/: base.html  home.html
app/templates/accounts/: login.html  profile.html  register.html
app/templates/characters/: character_confirm_delete.html  character_detail.html  character_form.html  character_list.html  mention_confirm_delete.html  mention_form.html
app/templates/exports/: export_detail.html  export_form.html  export_list.html  export_preview.html
app/templates/manuscripts/: manuscript_tree.html  node_confirm_delete.html  node_detail.html  node_form.html
app/templates/notes/: note_detail.html  (+3 more)
tools/: control_tui.py
(+16 files in other folders)
